--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     
+---
+spring:
+  config:
+    activate:
+      on-profile: development
 app:
   origin-url: http://localhost:4200
   api-url: /api/v1
