--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
   config:
     activate:
       on-profile: development
+  jackson:
+    time-zone: Europe/Zagreb      
 app:
   origin-url: http://localhost:4200
   api-url: /api/v1
+  timezone: GMT+7
