--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    password: ${DB_POSTGRE_PASSWORD}
-    url: ${DB_POSTGRE_URL}
-    username: ${DB_POSTGRE_USERNAME}
+    password: ${DB_PASSWORD}
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
   jpa:
     hibernate:
       ddl-auto: update
