--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>id.go.kejari-palu</groupId>
 	<artifactId>bdi</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-alpha</version>
 	<name>bdi</name>
 	<description>Bank Data</description>
 	<properties>
